selector work in progress