@@ -1,20 +1,19 @@
 package sessionj.runtime.net;
 
 import sessionj.runtime.SJIOException;
-import sessionj.util.SJLabel;
 
 public class SJPort
 {
 	private int port;
 	
-	private SJSessionParameters params;
+	private final SJSessionParameters params;
 	
 	public SJPort(int port) throws SJIOException
 	{
 		SJRuntime.takePort(port); // Takes the session port, but does not guarantee the setups are available. In keeping with specifying e.g. TCP 8888 - could already have been taken. 
 		
 		this.port = port;
-		this.params = new SJSessionParameters();
+        params = new SJSessionParameters();
 	}
 	
 	public SJPort(int port, SJSessionParameters params) throws SJIOException
@@ -49,7 +48,7 @@ public class SJPort
 
 	public final int hashCode()
 	{
-		return new Integer(getValue()).hashCode();
+		return Integer.valueOf(getValue()).hashCode();
 	}
 
 	public final SJPort clone() throws CloneNotSupportedException // Open ports aren't cloneable.
